Add terrain class

--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\shader.h" />
     <ClInclude Include="src\stb_image.h" />
+    <ClInclude Include="src\terrain.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\brick.jpg" />
