Add perlin terrain, light object

--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -118,6 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -152,14 +153,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\light.h" />
+    <ClInclude Include="src\perlin.h" />
     <ClInclude Include="src\shader.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\terrain.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\brick.jpg" />
     <Image Include="res\dirt.jpg" />
-    <Image Include="res\wood.jpg" />
+    <Image Include="res\grass.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
