Rename project, add terrain switching

--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c8b9d93b-734e-48f6-b90e-4e6a6a5475f5}</ProjectGuid>
     <RootNamespace>game</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>blockgame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
