--- a/blockgame/blockgame.vcxproj.filters
+++ b/blockgame/blockgame.vcxproj.filters
@@ -54,10 +54,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\dirt.jpg">
+    <Image Include="res\grass.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="res\grass.jpg">
+    <Image Include="res\dirt.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
