Add global.h, keep track of current chunk

--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\global.h" />
     <ClInclude Include="src\light.h" />
     <ClInclude Include="src\perlin.h" />
     <ClInclude Include="src\stb_image.h" />
