--- a/blockgame/blockgame.vcxproj.filters
+++ b/blockgame/blockgame.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClInclude Include="src\light.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\global.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\grass.png">
