--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -161,8 +161,13 @@
     <ClInclude Include="src\world.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\atlas.png" />
     <Image Include="res\dirt.png" />
-    <Image Include="res\grass.png" />
+    <Image Include="res\grass_side.png" />
+    <Image Include="res\grass_side_overlay.png" />
+    <Image Include="res\grass_top.png" />
+    <Image Include="res\grass_top_overlay.png" />
+    <Image Include="res\stone.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
