--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -167,6 +167,9 @@
   <ItemGroup>
     <Image Include="res\atlas.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="dat\chunks.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
