Add Game class, add Terrain class, create and delete world and camera objects based on game state, remove m_ prefix

--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -161,8 +161,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\game.h" />
     <ClInclude Include="src\global.h" />
     <ClInclude Include="src\light.h" />
+    <ClInclude Include="src\terrain.h" />
     <ClInclude Include="src\perlin.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\ui.h" />
