--- a/blockgame/blockgame.vcxproj.filters
+++ b/blockgame/blockgame.vcxproj.filters
@@ -64,6 +64,12 @@
     <ClInclude Include="src\ui.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\terrain.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="dat\chunks.txt">
