--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="src\global.cpp" />
     <ClCompile Include="src\light.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
     <ClCompile Include="src\terrain.cpp" />
     <ClCompile Include="src\ui.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\global.h" />
     <ClInclude Include="src\light.h" />
+    <ClInclude Include="src\player.h" />
     <ClInclude Include="src\terrain.h" />
     <ClInclude Include="src\perlin.h" />
     <ClInclude Include="src\stb_image.h" />
