--- a/blockgame/blockgame.vcxproj
+++ b/blockgame/blockgame.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\global.cpp" />
-    <ClCompile Include="src\light.cpp" />
+    <ClCompile Include="src\effects.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
@@ -172,7 +172,7 @@
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\global.h" />
-    <ClInclude Include="src\light.h" />
+    <ClInclude Include="src\effects.h" />
     <ClInclude Include="src\player.h" />
     <ClInclude Include="src\terrain.h" />
     <ClInclude Include="src\perlin.h" />
