--- a/blockgame/blockgame.vcxproj.filters
+++ b/blockgame/blockgame.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\inventory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\world_shader.fs">
@@ -107,6 +110,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\inventory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\console.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
